Fix common form cancel/reset button layout issues

--- a/styles/form/form.less
+++ b/styles/form/form.less
@@ -536,8 +536,9 @@
 		.resetFormButton, .cancelFormButton {
 			float: left
 		}
-		div.clear {
-			clear: both;
+
+		> a {
+			display: inline-block;
 		}
 	}
 }
